# svgoo

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  RELEASE_NOTES_v1.2.0.md  TODO.md  build.sh  package.json  rollup.config.js
.cursor/rules/: ffi-bindings.mdc  javascript-interop.mdc  svg-optimization-pipeline.mdc
.giga/: specifications.json
.github/workflows/: ci.yml  release.yml
docs/: svgoo.1.md
js-dist/: svgo-core.js  svgo-node.js  svgoo-embedded.js
js-src/: svgoo-bridge.js  svgoo-standalone.js
release-assets/: svgoo-v1.1.0-macos-x86_64  svgoo-v1.2.0-macos-x86_64
src/: ast.rs  config.rs  core.rs  embedded_js.rs  error.rs  ffi.rs  lib.rs  main.rs  optimize.rs  plugin.rs
tests/: cli_integration.rs  cross_platform_build_tests.rs  cross_platform_test.rs  stdin_stdout_tests.rs  svg_test_suite.rs  test_utils.rs
